--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "^3.4.4",
     "web-vitals": "^4.2.4"
   },
