--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "cra-template": "1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.29.0",
+    "react-router": "^7.2.0",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.4"
   },
